--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
     <div id="main">
         <div id="title">
             <h1>
-                <!-- <a href="" style="color: black; text-decoration: none;"> -->
                 Fei Shan
-                <!-- </a> -->
             </h1>
             <address>
                 <span class="icon fai">&#x2709</span> <a href="mailto:fshan@vt.edu" target="_blank">fshan@vt.edu</a>
             </address>
-            <!-- <nav>
-                <button id="nav_btn_academic">Academic</button> |
-                <button id="nav_btn_personal">Personal</button>
-            </nav> -->
         </div>
         <div id="content">
             <div class="slide-container">
@@ -49,28 +43,11 @@
                         </h3>
                         <p>
                             Decidio: A pilot implementation and user study of a novel decision-support system.
-                            <a class="ref" href="https://link.springer.com/book/10.1007/978-3-030-48641-9"
+                            <a class="ref" href="https://link.springer.com/chapter/10.1007/978-3-030-48641-9_14"
                                 target="_blank">GDN 2020</a><br>
                             <span class="faint">Kevin Hogan, <span class="author">Fei Shan</span>, Monikka Ravichandran,
                                 Aadesh Bagmar, James Wang, Adam Sarsony, and James Purtilo</span>
                         </p>
-
-                        <!-- <h3>Education</h3>
-                        <ul>
-                            <li>
-                                Virginia Polytechnic Institution and State University<br \>
-                                <span class="gray">Ph.D. in Computer Science and Applications</span>
-                            </li>
-                            <li>
-                                Georgia Institute of Technology
-                            </li>
-                            <li>
-                                Unversity of Maryland, College Park
-                            </li>
-                            <li>
-                                ...
-                            </li>
-                        </ul> -->
                     </div>
                 </div>
                 <div id="personal" class="slide">
@@ -94,10 +71,7 @@
             <button id="nav_btn_personal">Personal</button>
         </nav>
     </div>
-
-    <!-- 
-    <script defer src="lib/jquery-3.6.4.min.js" type="text/javascript"></script>
-    <script defer src="lib/anime.min.js" type="text/javascript"></script> -->
+    
     <script defer src="static/scripts.js" type="text/javascript"></script>
 </body>
 
