--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Fei Shan's personal website">
     <meta name="keywords" content="">
     <meta name="author" content="Fei Shan">
+    <meta name="robots" content="noindex">
 
     <link rel="stylesheet" href="static/styles.css">
 </head>
