--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                             Publication
                         </h3>
                         <p>
+                            Community-driven AI support for genealogy research.
+                            <a class="ref" href="https://cscw.acm.org/2023/index.php/workshops/"
+                                target="_blank">Workshop on community-driven AI in CSCW 2023</a><br>
+                            <span class="faint"><span class="author">Fei Shan</span> and Kurt Luther</span>
+                        </p>
+                        <p>
                             Decidio: A pilot implementation and user study of a novel decision-support system.
                             <a class="ref" href="https://link.springer.com/chapter/10.1007/978-3-030-48641-9_14"
                                 target="_blank">GDN 2020</a><br>
