--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>
                             Community-driven AI support for genealogy research.
                             <a class="ref" href="https://cscw.acm.org/2023/index.php/workshops/"
-                                target="_blank">Workshop on community-driven AI in CSCW 2023</a><br>
+                                target="_blank">Workshop in CSCW 2023</a><br>
                             <span class="faint"><span class="author">Fei Shan</span> and Kurt Luther</span>
                         </p>
                         <p>
