--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>
                             Community-driven AI support for genealogy research.
                             <a class="ref" href="https://cscw.acm.org/2023/index.php/workshops/"
-                                target="_blank">Workshop in CSCW 2023</a><br>
+                                target="_blank">CSCW 2023 Workshop</a><br>
                             <span class="faint"><span class="author">Fei Shan</span> and Kurt Luther</span>
                         </p>
                         <p>
@@ -63,7 +63,10 @@
                         <ul>
                             <li>
                                 The <a href="https://plato.stanford.edu/entries/science-mechanisms/" target="_blank">new
-                                    mechanical philosophy</a>.
+                                    mechanical philosophy</a>
+                            </li>
+                            <li>
+                                <a href="https://plato.stanford.edu/entries/nietzsche/#Pers" target="_blank">Perspectivism</a>
                             </li>
                             <!-- <li>
                                 Artifacts that last longer than human lifespan.
