--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                     <div class="page">
                         <h3>About</h3>
                         <p>
-                            I'm a Ph.D. student in Computer Science and Applications at Virginia Tech advised by <a href="https://crowd.cs.vt.edu/kurt-luther/" target="_blank">Dr. Kurt Luther</a>. I study computer (AI) supported human information practice and collaboration over historical documents, which is under the human-computer interaction (HCI) research category.
+                            I'm a Ph.D. student in Computer Science at Virginia Tech advised by <a href="https://crowd.cs.vt.edu/kurt-luther/" target="_blank">Dr. Kurt Luther</a>. I study computer (AI) supported human information practice and collaboration over historical documents, which is under the human-computer interaction (HCI) research category.
                         </p>
                         <p>
                             I also work as a Graduate Assistant for the IT division at Virginia Tech <a href="https://dcarea.vt.edu/discovery/research-center-arlington.html" target="_blank">Research Center</a> in Arlington, VA. Prior to my Ph.D. study, I received graduate degrees in computer science from <a href="https://omscs.gatech.edu/" target="_blank">Georgia Institute of Technology</a> and the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>.
                         </p>
                         <h3>
-                            Research Interest
+                            Research Interests
                         </h3>
                         <p>
                             I'm interested in exploring (1) common themes of human information behavior with technologies across different fields, and (2) the diversity of it resulting from different perspectives and expertise. I develop systems guided by such knowledge.
                         <p>
                         <h3>
-                            Publication
+                            Publications
                         </h3>
                         <p>
                             Community-driven AI support for genealogy research.
