--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     Research Center</a> in Arlington, VA. Prior to my Ph.D. study, I received graduate degrees in
                 computer science from <a href="https://omscs.gatech.edu/" target="_blank">Georgia Institute of
                     Technology</a> and the <a href="https://www.cs.umd.edu/grad/ms-catalog/" target="_blank">University
-                    of Maryland</a>. My couresework involves a wide range of topics, including deep learning, computer
+                    of Maryland</a>. My coursework involves a wide range of topics, including deep learning, computer
                 vision, natural language processing, computer networks and security, and cognitive science.
             </p>
         </section>
@@ -170,7 +170,7 @@
             <ul>
                 <li>Ph.D. in Computer Science, Virginia Polytechnic Institute and State University<span class="faint">
                         -Present</span></li>
-                <li>M.S. in Computer Science, Gerogia Institute of Technology</li>
+                <li>M.S. in Computer Science, Georgia Institute of Technology</li>
                 <li>M.S. in Computer Science, University of Maryland</li>
             </ul>
         </section>
@@ -179,9 +179,15 @@
             <h2>Publications</h2>
             <div class="publication">
                 <p>
+                    Emotionally Intelligent Generative AI for Genealogy Research and Collaboration. <em><a
+                            class="ref" href="" target="_blank">CSCW 2025 Workshop</a></em><br>
+                    <span class="faint"><strong>Fei Shan</strong>, Kurt Luther</span>
+                </p>
+            </div>
+            <div class="publication">
+                <p>
                     Reexamining Technological Support for Genealogy Research, Collaboration, and Education. <em><a
-                            class="ref" href="https://arxiv.org/abs/2411.07869" target="_blank">CSCW
-                            2025</a></em><br>
+                            class="ref" href="https://dl.acm.org/doi/10.1145/3711053" target="_blank">CSCW 2025</a></em><br>
                     <span class="faint"><strong>Fei Shan</strong>, Kurt Luther</span>
                 </p>
             </div>
