Update publication links

--- a/index.html
+++ b/index.html
@@ -180,29 +180,32 @@
             <div class="publication">
                 <p>
                     Emotionally Intelligent Generative AI for Genealogy Research and Collaboration. <em><a
-                            class="ref" href="" target="_blank">CSCW 2025 Workshop</a></em><br>
+                            class="ref" href="https://www.augmentedcollaboration.info/" target="_blank">
+                        CSCW 2025 Workshop</a></em><br>
                     <span class="faint"><strong>Fei Shan</strong>, Kurt Luther</span>
                 </p>
             </div>
             <div class="publication">
                 <p>
                     Reexamining Technological Support for Genealogy Research, Collaboration, and Education. <em><a
-                            class="ref" href="https://dl.acm.org/doi/10.1145/3711053" target="_blank">CSCW 2025</a></em><br>
+                            class="ref" href="https://dl.acm.org/doi/10.1145/3711053" target="_blank">
+                        CSCW 2025</a></em><br>
                     <span class="faint"><strong>Fei Shan</strong>, Kurt Luther</span>
                 </p>
             </div>
             <div class="publication">
                 <p>
                     Community-driven AI support for genealogy research. <em><a class="ref"
-                            href="https://sites.google.com/nd.edu/community-ai-cscw-2023/home" target="_blank">CSCW 2023
-                            Workshop</a></em><br>
+                            href="https://sites.google.com/nd.edu/community-ai-cscw-2023/home" target="_blank">
+                        CSCW 2023 Workshop</a></em><br>
                     <span class="faint"><strong>Fei Shan</strong>, Kurt Luther</span>
                 </p>
             </div>
             <div class="publication">
                 <p>Decidio: A pilot implementation and user study of a novel decision-support
                     system. <em><a class="ref" href="https://link.springer.com/chapter/10.1007/978-3-030-48641-9_14"
-                            target="_blank">GDN 2020</a></em><br>
+                            target="_blank">
+                        GDN 2020</a></em><br>
                     <span class="faint">Kevin Hogan, <strong>Fei Shan</strong>, Monikka Ravichandran,
                         Aadesh Bagmar, James Wang, Adam Sarsony, James Purtilo</span>
                 </p>
