Update title from Ph.D. student to candidate

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                I'm a Ph.D. student in Computer Science at Virginia Tech advised by <a
+                I'm a Ph.D. candidate in Computer Science at Virginia Tech advised by <a
                     href="https://crowd.cs.vt.edu/kurt-luther/" target="_blank">Dr. Kurt Luther</a>. I study computer
                 and AI supported human information practice, sensemaking, and collaboration over historical documents,
                 which is under the human-computer interaction (HCI) research category.
