Update title from Ph.D. Student to Ph.D. Candidate

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
     <header>
         <h1>Fei Shan</h1>
-        Ph.D. Student in Computer Science at Virginia Tech.
+        Ph.D. Candidate in Computer Science at Virginia Tech.
         <p class="faint">Email: <a href="mailto:fshan@vt.edu" target="_blank">fshan@vt.edu</a></p>
     </header>
 
